--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "astro": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.2.2",
+    "astro-embed": "^0.2.1"
   }
 }
